2020-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-esetkey-links): new function.
	(ee-read-command): new function.
	(ee-command-at-point): new function.

	* eev-testblocks.el (ee-insert-test-org-mode): new function.

2020-12-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wrap.el (ee-ppp0): new function.

	* eev-blinks.el (find-eppp): new function.

	* eev-elinks.el (ee-find-efunction-links): added a line with
	`(find-eppp (mapcar 'car load-history))'.

2020-12-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-pdftools-revert-all): new function.

2020-11-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-eval.el (ee-eval-last-sexp-7): new function.
	(ee-eval-last-sexp): added support for `ee-eval-last-sexp-7'.

2020-11-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-line): new variable.
	(eepitch-line): when the value in the variable `eepitch-line' is
	non-nil then run `(funcall eepitch-line line)' instead of the
	default behavior.
	(eepitch): setq eepitch-line to nil.
	(eepitch-vterm): new function.
	(eepitch-line-vterm): new function.

2020-11-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-code-c-d-base): added a link to
	`find-eev-quick-intro'.

2020-11-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (eepitch-python2): new function.
	(eepitch-python): make it use python3.

2020-11-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-grep-links): rewrote using
	`find-find-links-links-new' and added documentation.

2020-10-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-youtubedl-links): rewrote using
	`find-find-links-links-new'. Deleted the sexps with `find-video'
	and `code-video' that would point to a partially downloaded video.
	(ee-youtubedl-dirs): new variable.
	(ee-youtubedl-dir-links): new function.
	(ee-youtubedl-dir2, ee-youtubedl-dir3, ee-youtubedl-dir4):
	deleted.

	* eev-elinks.el (find-eface-links, find-color-links): rewrote